UI: Fix background-attachment fixed bug on mobile Chrome, fix overflow reset

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ html, body {
   background-color: var(--background);
   background-image: radial-gradient(#CBD5E1 1.5px, transparent 1.5px);
   background-size: 24px 24px;
-  background-attachment: fixed;
+  /* background-attachment: fixed; DIHAPUS KARENA BUG DI MOBILE CHROME/SAFARI */
   color: var(--foreground);
   font-family: var(--font-google), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
